update index html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <header class="beginning">
-      <div class="container coddac">
-        <nav class="navigation tabl-navigation">
+      <div class="container coddac tabl-container">
+        <nav class="navigation  tabl-navigation">
           <a class="webStudio tabl-webStudio" href="./index.html"
             ><span class="navigation-item">WEB</span>STUDIO</a
           >
