update index html

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
       </div>
     </header>
     <main class="main">
-      <!--<section class="effective-solutions">
+      <section class="effective-solutions mobil-solution">
         <div class="Business">
-          <h1 class="effective-solutions-title">
+          <h1 class="effective-solutions-title mobil-solutions-title">
             Effective Solutions <br />
-            for Your Business
+            For Your Business
           </h1>
-          <button class="button-studio" type="button" data-modal-open>
+          <button class="button-studio mobil-button-studio" type="button" data-modal-open>
             Order Service
           </button>
           <div class="bakdrop is-hidden" data-modal>
@@ -203,7 +203,7 @@
             </div>
           </div>
         </div>
-      </section>-->
+      </section>
       <!--<section class="visually">
         <div class="container">
           <ul class="icon-styles">
@@ -599,6 +599,6 @@
       </div>
     </footer>-->
     <script defer src="./js/mobile-menu.js"></script>
-    <!--<script src="./js/modal.js"></script>-->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
