update index html

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
       </div>
     </header>
     <main class="main">
-      <section class="effective-solutions mobil-solution">
+      <section class="effective-solutions mobil-solution tabl-solution">
         <div class="Business">
-          <h1 class="effective-solutions-title mobil-solutions-title">
+          <h1 class="effective-solutions-title mobil-solutions-title tabl-solutions-title">
             Effective Solutions <br />
             For Your Business
           </h1>
-          <button class="button-studio mobil-button-studio" type="button" data-modal-open>
+          <button class="button-studio mobil-button-studio tabl-button-studio" type="button" data-modal-open>
             Order Service
           </button>
           <div class="bakdrop is-hidden" data-modal>
