update index html

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       <section class="our-team mobil-our-team">
         <div class="container">
           <h2 class="our-team-title mobil-our-team-title tabl-our-team-title">Our Team</h2>
-          <ul class="card-set-foto">
+          <ul class="card-set-foto mobil-card-set-foto tabi-card-set-foto">
             
             <li class="item">
               <img
@@ -345,8 +345,8 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-foto">Mark Guerrero</h3>
-              <p class="text-pr">Product Designer</p>
+              <h3 class="text-foto mobil-text-foto">Mark Guerrero</h3>
+              <p class="text-pr moil-text-pr">Product Designer</p>
 
               <ul class="wardrobe-list tabl-wardrobe-list">
                 <li class="wardrobe-title-icon">
@@ -388,8 +388,8 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-foto">Tom Ford</h3>
-              <p class="text-pr">Frontend Developer</p>
+              <h3 class="text-foto mobil-text-foto">Tom Ford</h3>
+              <p class="text-pr moil-text-pr">Frontend Developer</p>
 
               <ul class="wardrobe-list">
                 <li class="wardrobe-title-icon">
@@ -431,8 +431,8 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-foto">Camila Garcia</h3>
-              <p class="text-pr">Marketing</p>
+              <h3 class="text-foto mobil-text-foto">Camila Garcia</h3>
+              <p class="text-pr moil-text-pr">Marketing</p>
 
               <ul class="wardrobe-list">
                 <li class="wardrobe-title-icon">
@@ -474,8 +474,8 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-foto">Daniel Wilson</h3>
-              <p class="text-pr">UI Designer</p>
+              <h3 class="text-foto mobil-text-foto">Daniel Wilson</h3>
+              <p class="text-pr moil-text-pr">UI Designer</p>
 
               <ul class="wardrobe-list">
                 <li class="wardrobe-title-icon">
