--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,9 @@
     <header class="beginning">
       <div class="container coddac">
         <nav class="navigation">
-          <a class="webStudio" href="./index.html"><span class="navigation-item">WEB</span>STUDIO</a>
+          <a class="webStudio" href="./index.html"
+            ><span class="navigation-item">WEB</span>STUDIO</a
+          >
           <ul class="menu">
             <li><a class="portfolio-link" href="./index.html">Studio</a></li>
             <li><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -35,10 +37,16 @@
         </button>
         <ul class="contacts">
           <li class="mail tabl-mail">
-            <a class="infodevstudio tabl-infodevstudio" href="info@devstudio.com">info@devstudio.com</a>
+            <a
+              class="infodevstudio tabl-infodevstudio"
+              href="info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="mail tabl-mail">
-            <a class="fone tabl-fone" href="+110001111111">+11 (000) 111-11-11</a>
+            <a class="fone tabl-fone" href="+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </div>
@@ -61,7 +69,9 @@
               <a class="fone-mobil" href="+110001111111">+11 (000) 111-11-11</a>
             </li>
             <li class="mail-mobil">
-              <a class="infodevstudio-mobil" href="info@devstudio.com">info@devstudio.com</a>
+              <a class="infodevstudio-mobil" href="info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
           </ul>
           <ul class="wardrobe-list-mobil">
@@ -321,61 +331,63 @@
         </div>
       </section>
     </main>
-    <footer class="lowerpart">
-      <div class="container container-footer">
-        <div class="footer-block">
-          <a class="lowerpart-block" href="./index.html"><span class="lowerpart-item">WEB</span>STUDIO</a>
-          <p class="lowerpart-title">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-icon">
-          <h2 class="footer-title">Social media</h2>
-          <ul class="footer-list">
-            <li class="footer-title-icon">
-              <a class="wardrobe-icon-svg-a" href="#">
-                <svg class="footer-icon-svg" wigth="16" height="16">
-                  <use href="./images/icon.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-title-icon">
-              <a class="wardrobe-icon-svg-a" href="#">
-                <svg class="wardrobe-icon-svg" wigth="16" height="16">
-                  <use href="./images/icon.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-title-icon">
-              <a class="wardrobe-icon-svg-a" href="#">
-                <svg class="wardrobe-icon-svg" wigth="16" height="16">
-                  <use href="./images/icon.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-title-icon">
-              <a class="wardrobe-icon-svg-a" href="#">
-                <svg class="wardrobe-icon-svg" wigth="16" height="16">
-                  <use href="./images/icon.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="sobscribe-input">
-          <h2 class="subscribe-title">Subscribe</h2>
-          <form class="subscribe-form">
-            <label>
-              <input class="subscribe-form-field" type="email" name="email" placeholder="Email" />
-            </label>
-            <button class="subscribe-send" type="Send">
-              <p class="subscribe-send-title">Subscribe</p>
-            </button>
-          </form>
-        </div>
+  <footer class="lowerpart mobil-lowerpart">
+    <div class="container  container-footer">
+      <div class="footer-block">
+        <a class="lowerpart-block mobil-lowerpart-block" href="./index.html"><span
+            class="lowerpart-item">WEB</span>STUDIO</a>
+        <p class="lowerpart-title mobil-lowerpart-title">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
-    </footer>
+      <div class="footer-icon mobil-footer-icon">
+        <h2 class="footer-title mobil-footer-title">Social media</h2>
+        <ul class="footer-list mobil-footer-list">
+          <li class="footer-title-icon mobil-footer-title-icon">
+            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
+              <svg class="footer-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-title-icon mobil-footer-title-icon">
+            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-title-icon mobil-footer-title-icon">
+            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-title-icon mobil-footer-title-icon">
+            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
+              <svg class="wardrobe-icon-svg mobil-wardrobe-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="sobscribe-input mobil-sobscribe-input">
+        <h2 class="subscribe-title mobil-subscribe-title">Subscribe</h2>
+        <form class="subscribe-form">
+          <label>
+            <input class="subscribe-form-field mobil-subscribe-form-field" type="email" name="email"
+              placeholder="Email" />
+          </label>
+          <button class="subscribe-send mobil-subscribe-send" type="submit">
+            <p class="subscribe-send-title mobil-subscribe-send-title">Subscribe</p>
+          </button>
+        </form>
+      </div>
+    </div>
+  </footer>
     <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
