--- a/index.html
+++ b/index.html
@@ -561,63 +561,63 @@
         </div>
       </section>
     </main>
-    <footer class="lowerpart mobil-lowerpart">
-      <div class="container  container-footer">
-        <div class="footer-block">
-          <a class="lowerpart-block mobil-lowerpart-block" href="./index.html"
+    <footer class="lowerpart mobil-lowerpart tabl-lowerpart">
+      <div class="container  container-footer tabl-container-footer">
+        <div class="footer-block tabl-footer-block">
+          <a class="lowerpart-block mobil-lowerpart-block tabl-lowerpart-block" href="./index.html"
             ><span class="lowerpart-item">WEB</span>STUDIO</a
           >
-          <p class="lowerpart-title mobil-lowerpart-title">
+          <p class="lowerpart-title mobil-lowerpart-title tabl-lowerpart-title">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-icon mobil-footer-icon">
-          <h2 class="footer-title mobil-footer-title">Social media</h2>
-          <ul class="footer-list mobil-footer-list">
-            <li class="footer-title-icon mobil-footer-title-icon">
-              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
+        <div class="footer-icon mobil-footer-icon tabl-footer-icon">
+          <h2 class="footer-title mobil-footer-title tabl-footer-title">Social media</h2>
+          <ul class="footer-list mobil-footer-list tabl-footer-list">
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
                 <svg class="footer-icon-svg" wigth="16" height="16">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-title-icon mobil-footer-title-icon">
-              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
-                <svg class="wardrobe-icon-svg" wigth="16" height="16">
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
+                <svg class="wardrobe-icon-svg tabl-wardrobe-icon-svg" wigth="16" height="16">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-title-icon mobil-footer-title-icon">
-              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
-                <svg class="wardrobe-icon-svg" wigth="16" height="16">
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
+                <svg class="wardrobe-icon-svg tabl-wardrobe-icon-svg" wigth="16" height="16">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-title-icon mobil-footer-title-icon">
-              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
-                <svg class="wardrobe-icon-svg mobil-wardrobe-icon-svg" wigth="16" height="16">
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
+                <svg class="wardrobe-icon-svg tabl-wardrobe-icon-svg mobil-wardrobe-icon-svg" wigth="16" height="16">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="sobscribe-input mobil-sobscribe-input">
-          <h2 class="subscribe-title mobil-subscribe-title">Subscribe</h2>
+        <div class="sobscribe-input mobil-sobscribe-input tabl-sobscribe-input">
+          <h2 class="subscribe-title mobil-subscribe-title tabl-subscribe-title">Subscribe</h2>
           <form class="subscribe-form">
             <label>
               <input
-                class="subscribe-form-field mobil-subscribe-form-field"
+                class="subscribe-form-field mobil-subscribe-form-field tabl-subscribe-form-field"
                 type="email"
                 name="email"
                 placeholder="Email"
               />
             </label>
-            <button class="subscribe-send mobil-subscribe-send" type="submit">
-              <p class="subscribe-send-title mobil-subscribe-send-title">Subscribe</p>
+            <button class="subscribe-send mobil-subscribe-send tabl-subscribe-send" type="submit">
+              <p class="subscribe-send-title mobil-subscribe-send-title tabl-subscribe-send-title">Subscribe</p>
             </button>
           </form>
         </div>
