--- a/portfolio.html
+++ b/portfolio.html
@@ -19,15 +19,17 @@
   </head>
   <body>
     <header class="beginning">
-      <div class="container coddac">
-        <nav class="navigation">
-          <a class="webStudio" href="./index.html"
-            ><span class="navigation-item">WEB</span>STUDIO</a
-          >
-          <ul class="menu">
-            <li><a class="portfolio-link" href="./index.html">Studio</a></li>
-            <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="link" href="/contact">Contact</a></li>
+      <div class="container coddac tabl-container">
+        <nav class="navigation tabl-navigation">
+          <a class="webStudio tabl-webStudio" href="./index.html"><span class="navigation-item">WEB</span>STUDIO</a>
+          <ul class="menu tabl-menu">
+            <li>
+              <a class="link tabl-link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="portfolio-link tabl-link-port" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="link tabl-link" href="/contact">Contact</a></li>
           </ul>
         </nav>
         <button type="button" class="mobil-menu-open" data-menu-open>
@@ -35,18 +37,12 @@
             <use href="./images/icon.svg#icon-burger"></use>
           </svg>
         </button>
-        <ul class="contacts">
+        <ul class="contacts tabl-contacks">
           <li class="mail tabl-mail">
-            <a
-              class="infodevstudio tabl-infodevstudio"
-              href="info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="infodevstudio tabl-infodevstudio" href="info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="mail tabl-mail">
-            <a class="fone tabl-fone" href="+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="fone tabl-fone" href="+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </div>
@@ -59,9 +55,9 @@
           </button>
           <ul class="menu-mobil">
             <li>
-              <a class="portfolio-link-mobil" href="./index.html">Studio</a>
+              <a class="link-mobil" href="./index.html">Studio</a>
             </li>
-            <li><a class="link-mobil" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="portfolio-link-mobil" href="./portfolio.html">Portfolio</a></li>
             <li><a class="link-mobil" href="/contact">Contact</a></li>
           </ul>
           <ul class="contacts-mobil">
@@ -69,9 +65,7 @@
               <a class="fone-mobil" href="+110001111111">+11 (000) 111-11-11</a>
             </li>
             <li class="mail-mobil">
-              <a class="infodevstudio-mobil" href="info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="infodevstudio-mobil" href="info@devstudio.com">info@devstudio.com</a>
             </li>
           </ul>
           <ul class="wardrobe-list-mobil">
@@ -108,9 +102,9 @@
       </div>
     </header>
     <main class="main-portfolio">
-      <section>
+      <section class="portfolio">
         <div class="container-portfolio">
-          <ul class="list main">
+          <ul class="list tabl-main ">
             <li class="block-button">
               <button class="button-portfolio" type="button">All</button>
             </li>
@@ -126,14 +120,14 @@
             <li class="block-button">
               <button class="button-portfolio" type="button">Marketing</button>
             </li>
-            <li class="block-button"></li>
+          
           </ul>
-          <ul class="foto-work">
-            <li class="foto-text-title">
+          <ul class="foto-work tabl-foto-work mobil-foto-work">
+            <li class="foto-text-title mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(8).jpg"
                     alt="Banking App Interface Concept"
                     width="360"
@@ -145,17 +139,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Banking App Interface Concept</h3>
                   <p class="text-port">App</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(17).jpg"
                     alt=""
                     width="360"
@@ -167,17 +161,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Cashless Payment</h3>
                   <p class="text-port">Marketing</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(10).jpg"
                     alt="Meditaion App"
                     width="360"
@@ -189,17 +183,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Meditaion App</h3>
                   <p class="text-port">App</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(11).jpg"
                     alt="Taxi Service"
                     width="360"
@@ -211,17 +205,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Taxi Service</h3>
                   <p class="text-port">Marketing</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(12).jpg"
                     alt="Screen Illustrations"
                     width="360"
@@ -233,17 +227,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Screen Illustrations</h3>
                   <p class="text-port">Design</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(13).jpg"
                     alt="Online Courses"
                     width="360"
@@ -255,17 +249,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Online Courses</h3>
                   <p class="text-port">Marketing</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(14).jpg"
                     alt="Instagram Stories Concept"
                     width="360"
@@ -277,17 +271,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Instagram Stories Concept</h3>
                   <p class="text-port">Design</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(15).jpg"
                     alt="Organic Food"
                     width="360"
@@ -299,17 +293,17 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Organic Food</h3>
                   <p class="text-port">Web Site</p>
                 </div>
               </a>
             </li>
-            <li class="foto-text-title">
+            <li class="foto-text-title  mobil-foto-text-title tabl-foto-text-title">
               <a href="#" class="foto-work-link-wrapper link">
                 <div class="foto-work-wrapper">
                   <img
-                    class="foto-portfolio"
+                    class="foto-portfolio tabl-foto-portfolio mobil-foto-portfolio"
                     src="./images/img(16).jpg"
                     alt="Fresh Coffee"
                     width="360"
@@ -321,7 +315,7 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="cartca">
+                <div class="cartca tabl-cartca mobil-cartca">
                   <h3 class="text-foto-port">Fresh Coffee</h3>
                   <p class="text-port">Web Site</p>
                 </div>
@@ -331,63 +325,63 @@
         </div>
       </section>
     </main>
-  <footer class="lowerpart mobil-lowerpart">
-    <div class="container  container-footer">
-      <div class="footer-block">
-        <a class="lowerpart-block mobil-lowerpart-block" href="./index.html"><span
-            class="lowerpart-item">WEB</span>STUDIO</a>
-        <p class="lowerpart-title mobil-lowerpart-title">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+    <footer class="lowerpart mobil-lowerpart tabl-lowerpart">
+      <div class="container  container-footer tabl-container-footer">
+        <div class="footer-block tabl-footer-block">
+          <a class="lowerpart-block mobil-lowerpart-block tabl-lowerpart-block" href="./index.html"><span
+              class="lowerpart-item">WEB</span>STUDIO</a>
+          <p class="lowerpart-title mobil-lowerpart-title tabl-lowerpart-title">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-icon mobil-footer-icon tabl-footer-icon">
+          <h2 class="footer-title mobil-footer-title tabl-footer-title">Social media</h2>
+          <ul class="footer-list mobil-footer-list tabl-footer-list">
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
+                <svg class="footer-icon-svg" wigth="16" height="16">
+                  <use href="./images/icon.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
+                <svg class="wardrobe-icon-svg tabl-wardrobe-icon-svg" wigth="16" height="16">
+                  <use href="./images/icon.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
+                <svg class="wardrobe-icon-svg tabl-wardrobe-icon-svg" wigth="16" height="16">
+                  <use href="./images/icon.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-title-icon mobil-footer-title-icon tabl-footer-title-icon">
+              <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a tabl-wardrobe-icon-svg-a" href="#">
+                <svg class="wardrobe-icon-svg tabl-wardrobe-icon-svg mobil-wardrobe-icon-svg" wigth="16" height="16">
+                  <use href="./images/icon.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="sobscribe-input mobil-sobscribe-input tabl-sobscribe-input">
+          <h2 class="subscribe-title mobil-subscribe-title tabl-subscribe-title">Subscribe</h2>
+          <form class="subscribe-form">
+            <label>
+              <input class="subscribe-form-field mobil-subscribe-form-field tabl-subscribe-form-field" type="email"
+                name="email" placeholder="Email" />
+            </label>
+            <button class="subscribe-send mobil-subscribe-send tabl-subscribe-send" type="submit">
+              <p class="subscribe-send-title mobil-subscribe-send-title tabl-subscribe-send-title">Subscribe</p>
+            </button>
+          </form>
+        </div>
       </div>
-      <div class="footer-icon mobil-footer-icon">
-        <h2 class="footer-title mobil-footer-title">Social media</h2>
-        <ul class="footer-list mobil-footer-list">
-          <li class="footer-title-icon mobil-footer-title-icon">
-            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
-              <svg class="footer-icon-svg" wigth="16" height="16">
-                <use href="./images/icon.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-title-icon mobil-footer-title-icon">
-            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
-              <svg class="wardrobe-icon-svg" wigth="16" height="16">
-                <use href="./images/icon.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-title-icon mobil-footer-title-icon">
-            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
-              <svg class="wardrobe-icon-svg" wigth="16" height="16">
-                <use href="./images/icon.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-title-icon mobil-footer-title-icon">
-            <a class="wardrobe-icon-svg-a mobil-wardrobe-icon-svg-a" href="#">
-              <svg class="wardrobe-icon-svg mobil-wardrobe-icon-svg" wigth="16" height="16">
-                <use href="./images/icon.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="sobscribe-input mobil-sobscribe-input">
-        <h2 class="subscribe-title mobil-subscribe-title">Subscribe</h2>
-        <form class="subscribe-form">
-          <label>
-            <input class="subscribe-form-field mobil-subscribe-form-field" type="email" name="email"
-              placeholder="Email" />
-          </label>
-          <button class="subscribe-send mobil-subscribe-send" type="submit">
-            <p class="subscribe-send-title mobil-subscribe-send-title">Subscribe</p>
-          </button>
-        </form>
-      </div>
-    </div>
-  </footer>
+    </footer>
     <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
