update index html

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
       </div>
     </header>
     <main class="main-portfolio">
-      <section class="portfolio">
+      <section class="portfolio tabl-portfolio mobil-portfolio">
         <div class="container-portfolio">
           <ul class="list tabl-main ">
             <li class="block-button">
