--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
           <ul class="foto-doing">
             <li class="photo-what">
               <img
+              srcset="./images/img(6).jpg 1x,
+                        ./images/img(6)@2x.jpg 2x"
                 src="./images/img(6).jpg"
                 alt="Photo PC"
                 width="360"
@@ -315,6 +317,8 @@
             </li>
             <li class="photo-what">
               <img
+              srcset="./images/img(5).jpg 1x,
+                        ./images/img(5)@2x.jpg 2x"
                 src="./images/img(5).jpg"
                 alt="Photo SmartPhon"
                 width="360"
@@ -323,6 +327,8 @@
             </li>
             <li class="photo-what">
               <img
+              srcset="./images/img(4).jpg 1x,
+                        ./images/img(4)@2x.jpg 2x"
                 src="./images/img(4).jpg"
                 alt="Photo PC and SmartPhon"
                 width="360"
@@ -340,6 +346,8 @@
             <li class="item tabi-card-set-foto-item">
               <img
                 class="foto"
+                 srcset="./images/img.jpg 1x,
+                        ./images/img@2x.jpg 2x"
                 src="./images/img.jpg"
                 alt="Picture of Photo Mark Guerrero"
                 width="264"
@@ -383,6 +391,8 @@
             <li class="item tabi-card-set-foto-item">
               <img
                 class="foto"
+                srcset="./images/img(1).jpg 1x,
+                        ./images/img(1)@2x.jpg 2x" 
                 src="./images/img(1).jpg"
                 alt="Picture of Photo Tom Ford"
                 width="264"
@@ -426,6 +436,8 @@
             <li class="item tabi-card-set-foto-item">
               <img
                 class="foto"
+                 srcset="./images/img(2).jpg 1x,
+                        ./images/img(2)@2x.jpg 2x"
                 src="./images/img(2).jpg"
                 alt="Picture of Photo Camila Garcia"
                 width="264"
@@ -469,6 +481,8 @@
             <li class="item tabi-card-set-foto-item">
               <img
                 class="foto"
+                 srcset="./images/img(3).jpg 1x,
+                        ./images/img(3)@2x.jpg 2x"
                 src="./images/img(3).jpg"
                 alt="Picture of Photo Daniel Wilson"
                 width="264"
