update index html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>
               <a class="link tabl-link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li><a class="link tabl-link" href="/contact">Contact</a></li>
+            <li><a class="link tabl-link" href="/contact">Contacts</a></li>
           </ul>
         </nav>
         <button type="button" class="mobil-menu-open" data-menu-open>
@@ -68,7 +68,7 @@
               <a class="portfolio-link-mobil" href="./index.html">Studio</a>
             </li>
             <li><a class="link-mobil" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="link-mobil" href="/contact">Contact</a></li>
+            <li><a class="link-mobil" href="/contact">Contacts</a></li>
           </ul>
           <ul class="contacts-mobil">
             <li class="mail-mobil">
@@ -219,6 +219,7 @@
         </div>
       </section>
       <section class="visually mobil-visually tabl-visually">
+        <h2 class="visually-hidden">Our principles</h2>
         <div class="container mobil-container">
           <ul class="icon-styles">
             <li class="icon-styles-svg">
@@ -254,7 +255,6 @@
               </svg>
             </li>
           </ul>
-          <h2 class="visually-hidden">Our principles</h2>
           <ul class="card-set mobil-card-set tabl-card-set">
             <li class="straegy tabl-li">
               <h3 class="text-strategy mobil-text-strategy tabl-text-strategy">
