--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <li>
               <a class="portfolio-link tabl-link-port" href="./portfolio.html">Portfolio</a>
             </li>
-            <li><a class="link tabl-link" href="/contact">Contact</a></li>
+            <li><a class="link tabl-link" href="/contact">Contacts</a></li>
           </ul>
         </nav>
         <button type="button" class="mobil-menu-open" data-menu-open>
@@ -58,7 +58,7 @@
               <a class="link-mobil" href="./index.html">Studio</a>
             </li>
             <li><a class="portfolio-link-mobil" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="link-mobil" href="/contact">Contact</a></li>
+            <li><a class="link-mobil" href="/contact">Contacts</a></li>
           </ul>
           <ul class="contacts-mobil">
             <li class="mail-mobil">
@@ -103,8 +103,8 @@
     </header>
     <main class="main-portfolio">
       <section class="portfolio tabl-portfolio mobil-portfolio">
-        <div class="container-portfolio">
-          <ul class="list tabl-main ">
+        <div class="container-portfolio mobil-container-portfolio tabl-container-portfolio">
+          <ul class="list mobil-list tabl-main ">
             <li class="block-button">
               <button class="button-portfolio" type="button">All</button>
             </li>
